# DE_Challenge

./: .env.example  .gitignore  Dockerfile  MANIFEST.in  Pipfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup.cfg  setup.py
de_challenge/: ANSWERS.md  README.md  question1.py  question1_optimized.py  settings.py  spark_utils.py
de_challenge/input_data/: dummy_data.xlsx
de_challenge/input_data/csv/: diagnosis_code.csv  medical_data_sample.csv  ndc.csv  pharmacy_data_sample.csv
de_challenge/output_data/: patients.csv
test-data/: README.md
tests/: __init__.py  conftest.py  test_question2_patient_output.py  test_sample_test.py
