##
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
#

[metadata]
name = de_challenge
##
# The version in this file is ignored if the version
# can be inferred from git tags using setuptools_scm.
version = 0.1.0
description = The repository for analysis of the drug and its effect
long_description = The repository for analysis of the drug and its effect
author = Devdutta Dasgupta
author_email = devdutta.dsg@gmail.com
url = https://github.com/devdasgupta/DE_Challenge
classifiers =
    Framework :: Python
    Intended Audience :: Healthcare Industry
    License :: Other/Proprietary License
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools-scm
install_requires =
    click==8.0.1
    pandas
    pyspark
    psycopg2-binary==2.8.6
    python-decouple==3.1
    structlog==21.1.0
    openpyxl

[options.extras_require]
dev =
    awscli-local==0.15
    check-manifest==0.46
    colorama==0.4.4
    isort==5.8.0
    recommonmark==0.7.1
test =
    factory-boy==3.2.0
    pytest-mock==3.6.1
    mock==4.0.3
    pyroma==3.1
    pytest-cov==2.12.1
    pytest-faker==2.0.0

[tool:pytest]
python_files = tests.py test_*.py *_tests.py
mock_use_standalone_module = True

[pep8]
ignore = D401, D210, E201, E202
max-line-length = 120

[check-manifest]
ignore =
    .dockerignore
    .github
    .github/*
    bin
    bin/*
